fix some layout problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,6 @@ body{
 .nav_left{
 
     text-decoration:none;
-    padding: 10px;
 }
 .nav_left_content{
     font-family: 'Noto Sans TC';
